--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/logo.png" type="image/png">
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+  <title>Bestune</title>
 </head>
 
 <body>
-
+  <header>
+    <div class="logo-container">
+      <img src="./images/logo.png" alt="">
+      <span>Bestune</span>
+    </div>
+    <nav>
+      <a href="">Front Bumper</a>
+      <a href="">Rear Bumper</a>
+      <a href="">Spoiler</a>
+      <a href="">Exhaust</a>
+    </nav>
+  </header>
+  <main>
+  </main>
+  <footer></footer>
 </body>
 
 </html>
