--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     </nav>
   </header>
   <main>
+    <section class="banner">
+      <div class="banner-card">
+        <h1>Bestune EVER</h1>
+        <p>Finest Tune You Can Find</p>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
