--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
         <p>Finest Tune You Can Find</p>
       </div>
     </section>
+
+    <section class="products">
+      <div class="product-card front-bumper">
+        <h1>Front Bumper</h1>
+      </div>
+      <div class="product-card rear-bumper">
+        <h1>Rear Bumper</h1>
+      </div>
+      <div class="product-card spoiler">
+        <h1>Spoiler</h1>
+      </div>
+      <div class="product-card exhaust">
+        <h1>Exhaust</h1>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
