--- a/index.html
+++ b/index.html
@@ -46,8 +46,31 @@
         <h1>Exhaust</h1>
       </div>
     </section>
+
+    <section class="epmloyees">
+      <div class="employee-card">
+        <div class="top-image">
+          <img src="./images/engineer.jpg" alt="">
+          <h1>Engineer</h1>
+        </div>
+      </div>
+      <div class="employee-card">
+        <div class="top-image">
+          <img src="./images/mechanic.jpg" alt="">
+          <h1>Mechanic</h1>
+        </div>
+      </div>
+      <div class="employee-card">
+        <div class="top-image">
+          <img src="./images/tuner.jpg" alt="">
+          <h1>Tuner</h1>
+        </div>
+      </div>
+    </section>
   </main>
-  <footer></footer>
+  <footer>
+    <p>&copy;Bestune</p>
+  </footer>
 </body>
 
 </html>
